Middle Project final version

--- a/day-05/day-05-site-complete/07-menu-reflow.html
+++ b/day-05/day-05-site-complete/07-menu-reflow.html
@@ -1,39 +1,48 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Menu - Re-flow</title>
-<link rel="stylesheet" href="styles/styles-menu-reflow.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Menu - Re-flow</title>
+    <link rel="stylesheet" href="styles/styles-menu-reflow.css">
 </head>
+
 <body>
-<div class="wrapper">
-<header>
-    <h1>Menu - Re-flow</h1>
-    <nav>
-        <ul>
-            <li><a href="#0">Home</a></li>
-            <li><a href="#0">About</a></li>
-            <li><a href="#0">Blog</a></li>
-            <li><a href="#0">Services</a></li>
-            <li><a href="#0">Support</a></li>
-            <li><a href="#0">FAQ</a></li>
-            <li><a href="#0">Careers</a></li>
-            <li><a href="#0">Contact</a></li>
-        </ul>
-    </nav>
-</header>
-<main>
-    <article>
-        <h2>Sit Amet</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eius nemo, numquam quibusdam, illum, officiis a minima sint autem quod vero porro tenetur laboriosam odio, dolores! Ipsam, deleniti incidunt nulla.</p>
-        <p>Autem illo perspiciatis cupiditate optio adipisci voluptate animi, non, alias est, totam aspernatur nobis consequatur explicabo debitis dolorem soluta maiores quos itaque tempora ea illum aperiam impedit sit. Hic, quidem.</p>
-        <p>Recusandae possimus iste voluptatum ratione. Repellat expedita quidem repellendus fugit dolore non beatae adipisci temporibus, provident sapiente rem iusto eum explicabo tenetur cum nisi rerum assumenda recusandae aperiam doloremque necessitatibus!</p>
-    </article>
-</main>
-<footer>
-    <p>&copy 2018 Michael Whyte</p>
-</footer>
-</div><!-- end wrapper -->
+    <div class="wrapper">
+        <header>
+            <h1>Menu - Re-flow</h1>
+            <nav>
+                <ul>
+                    <li><a href="#0">Home</a></li>
+                    <li><a href="#0">About</a></li>
+                    <li><a href="#0">Blog</a></li>
+                    <li><a href="#0">Services</a></li>
+                    <li><a href="#0">Support</a></li>
+                    <li><a href="#0">FAQ</a></li>
+                    <li><a href="#0">Careers</a></li>
+                    <li><a href="#0">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <article>
+                <h2>Sit Amet</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eius nemo, numquam quibusdam, illum,
+                    officiis a minima sint autem quod vero porro tenetur laboriosam odio, dolores! Ipsam, deleniti
+                    incidunt nulla.</p>
+                <p>Autem illo perspiciatis cupiditate optio adipisci voluptate animi, non, alias est, totam aspernatur
+                    nobis consequatur explicabo debitis dolorem soluta maiores quos itaque tempora ea illum aperiam
+                    impedit sit. Hic, quidem.</p>
+                <p>Recusandae possimus iste voluptatum ratione. Repellat expedita quidem repellendus fugit dolore non
+                    beatae adipisci temporibus, provident sapiente rem iusto eum explicabo tenetur cum nisi rerum
+                    assumenda recusandae aperiam doloremque necessitatibus!</p>
+            </article>
+        </main>
+        <footer>
+            <p>&copy 2018 Michael Whyte</p>
+        </footer>
+    </div><!-- end wrapper -->
 </body>
+
 </html>
