--- a/midlleProject/index.html
+++ b/midlleProject/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jose Luiz Web Page</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css" />
   <script defer src="scripts/site.js"></script>
 </head>
